--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,4 @@
 html,
 body {
-  @apply flex bg-theme-bg-subtle h-full w-full text-theme-fg-default;
+  @apply flex bg-theme-bg-default h-full w-full text-theme-fg-default;
 }
