--- a/tailwind.css
+++ b/tailwind.css
@@ -636,7 +636,7 @@ html, body {
   display: flex;
   height: 100%;
   width: 100%;
-  background-color: var(--theme-bg-subtle, #f5f5f5);
+  background-color: var(--theme-bg-default, #ffffff);
   color: var(--theme-fg-default, #171717);
 }
 
